src/app/projects/projects.component.scss
main {
    width: 1440;
    height: 1282.44px;
}

.content {
    margin-left: 120px;
    margin-right: 120px;
}

.upper-content {
    height: 658.22px;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    position: relative;

    .upper-left-content {
        height: 238px;
        width: 560px;
        position: relative;
        margin-top: 280px;

        h2 {
            font-family: 'Bricolage Grotesque';
            color: #0E1013;
            font-size: 64px;
            font-weight: 700;
            line-height: 64px;
        }

        h3 {
            font-family: 'Bricolage Grotesque';
            color: #0E1013;
            font-weight: 500;
            font-size: 20px;
            line-height: 20px;
            margin-bottom: 20px;
        }

        p {
            color: #0E1013;
            font-family: 'Bricolage Grotesque';
            font-size: 18px;
            font-weight: 400;
            line-height: 21.6px;
            position: absolute;
            bottom: 0;
        }
    }

    .upper-right-content {
        height: 515px;
        width: 560px;
        position: relative;
        margin-top: 143px;



        .hover-div {
            height: 400px;
            width: 560px;
            border-radius: 50px;
            position: relative;
            overflow: hidden;
            cursor: pointer;

            img {
                display: block;
                width: 100%;
            }

            .img1-wrapper {
                transform: scale(1);
                transition: transform 0.125s ease-in-out; // Übergangsdauer hier einstellen
            }

            .img1 {
                padding-right: 50px;
                padding-top: 20px;
                animation: wobble 2.5s infinite;
            }

            .img2 {
                z-index: 2;
                position: absolute;
                bottom: 60px;
                left: 0;
                height: 180px;
                width: 180px !important;
            }

            .action-btn {
                font-family: 'Bricolage Grotesque';
                font-size: 18px;
                font-weight: 500;
                position: absolute;
                z-index: 2;
                bottom: 30px;
                right: 30px;
                opacity: 0;
                transition: opacity 0.6s ease-in-out;
                padding: 12px 24px;
                border: 1px solid #F8F9FA;
                border-radius: 100px;
                box-shadow: 2px 4px 0px 0px #F8F9FA;
                background-color: transparent;
                color: #fff;
                cursor: pointer;

                &:hover {
                    background-color: #F87A55;
                    box-shadow: none;
                    transform: translateY(+4px) translateX(+6px);
                    transition: ease-in-out 125ms;
                }
            }

            &::after {
                content: "";
                position: absolute;
                bottom: 0;
                left: 0;
                width: 100%;
                height: 50%;
                background: linear-gradient(to top, rgba(128, 128, 128, 0.8), transparent);
                opacity: 0;
                transition: opacity 0.6s ease-in-out;
            }

            &:hover {
                .img1-wrapper {
                    transform: scale(1.2);
                }

                .img1 {
                    animation-play-state: paused;
                }

                &::after {
                    opacity: 1;
                }

                .action-btn {
                    opacity: 1;
                }
            }
        }

        @keyframes wobble {
            0% {
                transform: translateY(0);
            }

            30% {
                transform: translateY(-15px);
            }

            100% {
                transform: translateY(0);
            }
        }





        .join-description {
            position: absolute;
            bottom: 0px;
        }

        .project-header {
            color: #0E1013;
            font-family: 'Bricolage Grotesque';
            font-size: 24px;
            font-weight: 700;
            margin-bottom: 16px;
        }

        p {
            color: #0E1013;
            font-family: 'Bricolage Grotesque';
            font-size: 18px;
            font-weight: 400;
            line-height: 21.6px;
        }
    }
}

